# lurkkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/examples/: dev-local.yaml  web-server.yaml
lurkkit/: __init__.py  __main__.py  agent.py  alert_manager.py  config.py  models.py
lurkkit/alerters/: __init__.py  base.py  datadog.py  opsgenie.py  pagerduty.py  slack.py
lurkkit/collectors/: __init__.py  base.py  http.py  logs.py  process.py  system.py
lurkkit/telemetry/: __init__.py
scripts/: install.sh
tests/: test_lurkkit.py
